# agnostic

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  TODO.md  agnostic.agpkg.toml  alembic.ini  docker-compose.agnos.yml  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.old-style.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.tls.yml  docker-compose.yml  pyproject.toml  requirements-docker.txt  run_tests.py
.github/actions/setup-python-env/: action.yml
.github/workflows/: ci-cd.yml  ci.yml  dependency-update.yml  release.yml
agentic/: docker-compose.prod.yml
agents/: base.py  constants.py  crew_assembler.py  factory.py  packaging.py  status.py  tool_registry.py  tool_sandbox.py  versioning.py
agents/analyst/: Dockerfile  qa_analyst.py
agents/backend/: __init__.py  agnosai_backend.py  base.py  crewai_backend.py  router.py
agents/definitions/presets/: complete-lean.json  data-engineering-large.json  data-engineering-lean.json  data-engineering-standard.json  data-engineering.json  design-large.json  design-lean.json  design-standard.json  devops-large.json  devops-lean.json  devops-standard.json  devops.json  qa-standard.json  quality-large.json  quality-lean.json  quality-performance.json  quality-security.json  (+4 more)
agents/junior/: Dockerfile  junior_qa.py
agents/manager/: Dockerfile  qa_manager.py  qa_manager_optimized.py
agents/performance/: Dockerfile  qa_performance.py
agents/security_compliance/: Dockerfile  qa_security_compliance.py
agents/senior/: Dockerfile  senior_qa.py
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_apscheduler_jobs_table.py  db8d3fe1686e_initial_schema.py
benchmarks/: __init__.py  __main__.py  conftest.py  report.py  run.py  runner.py  scenarios.py  test_crewai_vs_agnosai.py
config/: agent_registry.py  agnos_agent_registration.py  agnos_environment.py  agnos_token_budget.py  credential_store.py  environment.py  gpu.py  gpu_scheduler.py  llm_integration.py  local_inference.py  model_manager.py  models.json  universal_llm_adapter.py
config/fleet/: __init__.py  coordinator.py  node.py  placement.py  registry.py  relay.py  shim.py  state.py
docker/: Dockerfile.agent  Dockerfile.agnos  Dockerfile.base  README.md  agent-entrypoint.sh  entrypoint.sh  pg-init.sh  supervisord.conf
docs/: README.md
docs/adr/: 002-realtime-communication-infrastructure.md  007-llm-integration.md  010-security-strategy.md  011-scalable-team-architecture.md  017-rest-task-submission-api-keys.md  021-agnosticos-integration.md  022-agnosticos-agent-hud.md  023-yeoman-websocket-bridge.md  024-structured-result-schemas.md  025-test-result-persistence.md  026-scheduled-report-enhancements.md  027-audit-logging-agent-metrics.md  028-credential-provisioning.md  029-general-purpose-agent-platform.md  README.md
docs/agents/: index.md
docs/api/: a2a-protocol.md  agents.md  llm_integration.md  tenant-provisioning.md  webgui.md
docs/deployment/: agnos.md  docker-compose.md  kubernetes.md
docs/development/: benchmarks.md  contributing.md  dependency-watch.md  manual-testing.md  roadmap-v2.md  roadmap.md  setup.md
docs/getting-started/: quick-start.md
docs/guides/: api-contract.md  gpu-non-agnos.md
docs/project/: changelog.md  roadmap.md
docs/security/: assessment.md
k8s/argocd/: applicationset.yaml  external-secrets.yaml
k8s/manifests/: config.yaml  horizontal-pod-autoscalers.yaml  ingress.yaml  network-policies.yaml  pod-disruption-budgets.yaml  qa-agents-1.yaml  qa-manager.yaml  webgui.yaml
scripts/: build-docker.sh  build-release.sh  bump-version.sh  export-openapi.py  generate-sdk.sh  run-e2e.sh  smoke_tests.py
shared/: agent_metrics.py  agnos_audit.py  agnos_dashboard_bridge.py  agnos_memory.py  agnos_rag_client.py  agnos_reasoning.py  agnos_recording_client.py  agnos_rpc_client.py  agnos_screen_client.py  agnos_vector_client.py  alerts.py  audit.py  context.py  crewai_compat.py  data_generation_service.py  metrics.py  rate_limit.py  resilience.py  ssrf.py  telemetry.py  version.py  yeoman_a2a_client.py  yeoman_audit.py  yeoman_dlp.py  yeoman_event_stream.py  yeoman_jwt.py  yeoman_mcp_server.py  yeoman_schemas.py
shared/database/: models.py  repository.py  tenant_repository.py  tenants.py
tests/benchmarks/: bench_definitions.py  bench_packaging.py
tests/e2e/: conftest.py  test_a2a_roundtrip.py  test_agnos_gateway.py  test_crew_dual_backend.py  test_fleet_lockstep.py  test_fleet_scaling.py  test_smoke.py  test_task_lifecycle.py
tests/integration/: test_agent_communication.py
tests/k8s/: test_k8s_manifests.py
tests/load/: locustfile.py
tests/unit/: conftest.py  test_agent_metrics.py  test_agent_monitor.py  test_agent_registry.py  test_agnos_agent_registration.py  test_agnos_deeper_integration.py  test_agnos_rpc.py  test_agnos_vector_client.py  test_agnosai_backend.py  test_alerts.py  test_api_validation.py  test_audit.py  test_backend_router.py  test_base_agent.py  test_code_review_changes.py  test_config_environment.py  test_constants.py  test_credential_provisioning.py  test_credential_store.py  test_crew_assembler.py  test_crewai_compat.py  test_crews_api.py  test_dashboard.py  test_data_generation.py  test_database_models.py  test_definitions_api.py  test_exports.py  test_fleet.py  test_gpu.py  test_history.py  test_junior_qa_tools.py  test_message_buffer.py  test_metrics.py  test_middleware.py  test_model_manager.py  test_observability.py  test_observability_hardening.py  test_packaging_versioning.py  test_performance_tools.py  test_permission_validator.py  (+23 more)
webgui/: Dockerfile  agent_monitor.py  api.py  app.py  auth.py  dashboard.py  exports.py  history.py  realtime.py  scheduled_reports.py
webgui/auth/: __init__.py  api_keys.py  models.py  oauth_provider.py  permission_validator.py  token_manager.py
webgui/routes/: __init__.py  agents.py  auth.py  crews.py  dashboard.py  definitions.py  dependencies.py  fleet.py  gpu.py  integration.py  mcp.py  persistence.py  reports.py  rpc.py  sessions.py  tasks.py  tenants.py  yeoman_webhooks.py
(+45 files in other folders)
