[build-system]
requires = ["setuptools>=65", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "agnostic-qa"
dynamic = ["version"]
description = "Agentic QA Team System - Containerized, multi-agent QA platform powered by CrewAI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Agentic QA Team", email = "qa@example.com"}
]
maintainers = [
    {name = "Agentic QA Team", email = "qa@example.com"}
]
keywords = [
    "testing",
    "quality-assurance", 
    "automation",
    "ai-agents",
    "crewai",
    "multi-agent",
    "containerized",
    "devops",
    "ci-cd"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
    "Typing :: Typed",
]
requires-python = ">=3.11,<3.14"

dependencies = [
    # NOTE: crewai 1.x drops LangChain in favour of litellm for LLM routing.
    # Production containers use Python 3.13 (Dockerfile) which satisfies
    # crewai 1.x's requires-python (<3.14,>=3.10). The local dev .venv runs Python 3.14
    # where crewai 1.x cannot be installed (chromadb→pydantic.v1 broken on 3.14);
    # see docs/development/dependency-watch.md for tracking details.
    "crewai>=1.0.0,<2.0.0",
    "redis>=5.0.8",
    "celery>=5.4.0",
    "pytest>=8.3.2",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "config*", "shared*", "webgui*", "advanced_testing*"]

[project.optional-dependencies]
# Dev tools - all updated to latest compatible versions
dev = [
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "types-requests>=2.31.0",
    "pre-commit>=4.0.0",
    "bandit>=1.8.0",
    "safety>=3.2.4",
]
docs = [
    "sphinx>=8.1.0",
    "sphinx-rtd-theme>=3.0.0",
]
test = [
    "pytest-playwright>=0.6.0",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.6.1",
]
web = [
    "chainlit>=2.0.0,<3.0.0",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "websockets>=13.0",
    "PyJWT[crypto]>=2.8.0",
    "reportlab>=4.0",
    "requests>=2.31.0",
    "apscheduler>=3.10.0",
    "pytz>=2024.1",
    "aiosmtplib>=2.0.0",
    "httpx>=0.27.0",
    "bcrypt>=4.0.0",
]
ml = [
    "numpy>=1.26.4",  # <2.0 cap removed — langchain dropped, no more numpy constraint
    "pandas>=2.2.2",
    "scikit-learn>=1.5.1",
    "opencv-python>=4.10.0.84",
    "faker>=28.0.0",
]
browser = [
    "playwright>=1.45.0",
    "appium-python-client>=5.0.0",
]
observability = [
    "prometheus-client>=0.20.0",
    "structlog>=24.0.0",
]
database = [
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
]

[project.urls]
Homepage = "https://github.com/MacCracken/agnostic"
Documentation = "https://github.com/MacCracken/agnostic/tree/main/docs"
Repository = "https://github.com/MacCracken/agnostic"
"Bug Tracker" = "https://github.com/MacCracken/agnostic/issues"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--verbose",
]
markers = [
    "unit: marks tests as unit tests (fast, no external dependencies)",
    "integration: marks tests as integration tests (require external services)",
    "e2e: End-to-end tests requiring Docker Compose services",
    "slow: marks tests as slow running",
    "redis: marks tests that require Redis",
    "rabbitmq: marks tests that require RabbitMQ",
    "security: marks tests related to security scanning",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "RUF", # Ruff-specific rules
    "TCH", # Type-checking imports
    "PERF", # Performance optimizations
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "RUF012", # Mutable class default
    "PTH100", # os.path.abspath -> Path.resolve (low priority)
    "PTH118", # os.path.join -> Path / operator (low priority)
    "PTH120", # os.path.dirname -> Path.parent (low priority)
    "PTH123", # open() -> Path.open() (low priority)
    "PERF401", # list comprehension suggestions (low priority)
    "RUF006", # asyncio.create_task not stored (low priority)
    "E722",   # bare except (legacy code)
    "E741",   # ambiguous variable names
    "RUF001", # ambiguous unicode (generated text)
    "B007",   # unused loop variable (legacy code)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["agents", "config", "shared", "webgui"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
color_output = true
explicit_package_bases = true
error_summary = true

[[tool.mypy.overrides]]
module = [
    "crewai.*",
    "litellm.*",
    "redis.*",
    "celery.*",
    "chainlit.*",
    "playwright.*",
    "cv2.*",
    "sklearn.*",
    "faker.*",
    "pytest.*",
    "aiohttp.*",
    "pandas.*",
    "numpy.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["agents", "config", "shared", "webgui"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/.*",
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "@overload",
]
show_missing = true
precision = 2
skip_covered = false
skip_empty = true

[tool.coverage.html]
directory = "htmlcov"
skip_covered = false

[tool.bandit]
exclude_dirs = ["tests", "test_*"]
skips = ["B101", "B601", "B311", "B105", "B112"]